3/5/2013 Jet Goodson <jetgoodson@gmail.com>
    A plots/*
    M utilityBelt.R
    * constructed feature plotting	
    M rage...
    * add custom tune function using parallel processing
    * added predict function
    M LitteraLector.R
    * added predict tool
    * switched the sink to include a log file
	
3/3/2013 Jet Goodson <jetgoodson@gmail.com>
    M utilityBelt.R
    M LitteraLector.R
    M rageAgainstTheSupportVectorMachine.R
    - switched to SparseM sparse matrices for storing dataset
    - no longer need constant columns, since sparse
    - scaled the data myself to save time (all features are between 0 and 255, so scaled to 0 and 1, which is well behave and doesn't really need scaling)

3/1/2013 Jet Goodson <jetgoodson@gmail.com>
    M utilityBelt.R
    - added functions to apply jitter and synthesize data
    - note that is requires installing matrixcalc	
    M LitteraLector.R
    - added virtual and synthesized SVM models, more config variables

2/28/2013 Jet Goodson <jetgoodson@gmail.com>
    M visualyze.R
    - added save ability
    M rageAgainstTheSupportVectorMachine.R
    - split into a train and test function
    M LitteraLector.R
    - added ability to save SVM then reload	
    M utilityBelt.R
    - added function to split into test and train datasets
	
2/28/2013 Jet Goodson <jetgoodson@gmail.com>
    M visualyze.R
    - tweaked the labels to be 0-9	
    M rageAgainstTheSupportVectorMachine.R
    - modified table output to have different names for different calls to rage
    M LitteraLector.R
    - added call to save SVM and reload it as example	

02/26/2013 Katie Malone <cmmalone.158@gmail.com>
    A visualyze.R
    - draws a matrix of prediction vs. truth for SVM
    - integrated with rageAgainst.R

02/11/2013 Jet Goodson <jetgoodson@gmail.com>
	M rageAgainstTheSupportVectorMachine.R
	- made the damn thing work
	M LitteraLector.R
	M utilityBelt.R
	- got rid of nearZeroVar thing
        M LitteraLector.R