@@ -1,3 +1,8 @@
+3/7/2013 JEt Goodson <jetgoodson@gmail.com>
+    M utilityBelt.R
+    M LitteraLector.R
+    - updated teh synthesizeData function to be faster
+
 3/5/2013 Jet Goodson <jetgoodson@gmail.com>
     A plots/*
     M utilityBelt.R
